--- a/Day-7-8/d8q1styles.css
+++ b/Day-7-8/d8q1styles.css
@@ -4,7 +4,7 @@
       }
 
       .header {
-        height: 200px;
+        height: 150px;
         width: 100%;
         background-color: lightgrey;
         line-height: 30px;
@@ -94,4 +94,38 @@
       }
       button {
         padding: 10px;
+      }
+      .note{
+        margin:20px;
+      }
+      .modal {
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.5);
+        position: fixed;
+        display: none;
+      }
+
+      .modalchild {
+        height: 120px;
+        width: 70%;
+        background-color: white;
+        margin-left: 15%;
+        margin-top: 100px;
+        display: inline-block;
+        padding: 30px;
+        position:relative;
+        font-family: Lora;
+      }
+
+      .alert{
+        width:20%;
+        position:absolute;
+        left:450px;
+        background-color: rgba(0, 0, 0, 0.3);
+        font-weight: bold;
+       
+      }
+      .notetext{
+        text-align: center;
       }
